# TradingBot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sprint19.md  tradingbot.yml
.github/workflows/: ci.yml
config/: credentials_example.yaml  slack_example.yaml
data/: spy_close.parquet  vix_close.parquet
notebooks/: feature_engineering.ipynb
notebooks/data/: AAPL_1d.csv
reports/: risk_grid_results.csv  success_report.csv
scripts/: analyze_50_stocks.py  full_backtest.py  run_demo.py  run_selected.py  visualize_results.py
src/tradingbot/: __init__.py
src/tradingbot/backtest/: __init__.py  aggregate.py  batch_runner.py  is_oos_eval.py  metrics.py  save_params.py  vbt_runner.py  walkforward.py
src/tradingbot/config/: __init__.py  default.yaml
src/tradingbot/data/: __init__.py  market_benchmarks.py  sp500_top50.py  universe.py  yfinance_downloader.py
src/tradingbot/evaluation/: __init__.py  benchmark_compare.py  metrics.py  risk_grid.py  success_report.py
src/tradingbot/exec/: __init__.py  alpaca_client.py  creds.py  (+1 more)
tests/: test_atr_sizer.py  test_backtest_core.py  test_batch_runner.py  test_cross_sectional.py  test_data_download.py  test_exec_router.py  test_features.py  test_full_backtest_cli.py  test_is_oos_eval.py  test_ledger_roundtrip.py  test_metrics.py  test_monitoring.py  test_param_persistence.py  test_regime_filter.py  test_risk_position_sizer.py  test_signals_momentum.py  test_signals_mr.py  test_single_signal_strats.py  test_smoke.py  test_success_report.py  test_volatility_periods.py  test_walkforward_mc.py
(+23 files in other folders)
